--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "description": {
     "en": "Adds support for myStrom devices."
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "compatibility": ">=1.5.0",
   "category": [
     "appliances",
@@ -35,6 +35,36 @@
       "capabilities": [
         "onoff",
         "measure_power"
+      ],
+      "pair": [
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ]
+    },
+    {
+      "id": "bulb",
+      "name": {
+        "en": "WiFi Bulb"
+      },
+      "images": {
+        "large": "drivers/bulb/assets/images/large.png",
+        "small": "drivers/bulb/assets/images/small.png"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "light_hue",
+        "light_saturation",
+        "dim"
       ],
       "pair": [
         {
