--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
   "name": "ch.mystrom.smarthome",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "This app provides support for the following devices:",
   "main": "app.js",
   "scripts": {
-    "start": "clear; athom project --run",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "info": "npm run -s _homeyRun -- info && exit; printf \"[Homey-App] \t $npm_package_name \n Version: \t v$npm_package_version \n Description: \t $npm_package_description \n Host: \t\t ${HOSTNAME} \n\nEnvironment variables:\n\n \" ",
+    "test": "npm run -s _homeyRun -- test && exit; athom app run",
+    "install": "npm run -s _homeyRun -- install && exit; athom app install",
+    "build": "npm run -s _homeyRun -- build && exit; athom app build && npm run init:app",
+    "deploy:patch": "npm run -s _homeyRun -- deploy:patch && exit; npm run _dbuild -- patch && npm run _release && athom app publish",
+    "deploy:minor": "npm run -s _homeyRun -- deploy:minor && exit; npm run _dbuild -- minor && npm run _release && athom app publish",
+    "deploy:major": "npm run -s _homeyRun -- deploy:major && exit; npm run _dbuild -- major && npm run _release && athom app publish",
+    "init:app": "npm run -s _homeyRun -- init:app && exit; npm init --quiet -y 1>/dev/null",
+    "createRepo": "npm run -s _homeyRun -- createRepo && exit; hub create -d \"$npm_package_description\" -h $npm_package_homepage $npm_package_name && npm run init:app",
+    "_homeyRun": "source ~/.bashrc && [[ \"$(type -t homey-run)\" = function ]] && homey-run -s",
+    "_release": "git checkout master && git pull && git tag v$npm_package_version && git push origin v$npm_package_version",
+    "_dbuild": "func() { athom app version $1 && npm run init:app && npm run __dbuild && git push origin master; }; func",
+    "__dbuild": "git commit -am v$npm_package_version"
   },
   "repository": {
     "type": "git",
-    "url": "git+git://github.com/cgHome/ch.mystrom.smarthome"
+    "url": "git+https://github.com/cgHome/ch.mystrom.smarthome.git"
   },
   "keywords": [
     "homey",
     "devices",
     "app",
-    "myStrom Smart Home"
+    "myStrom Smart Home",
+    "Smart Home",
+    "athom"
   ],
-  "author": "Chris.Gross <cgHome@gmx.net>",
+  "author": "Chris Gross <cgHome@gmx.net>",
   "license": "ISC",
   "dependencies": {
     "bonjour": "^3.5.0",
     "homey-wifidriver": "git+https://github.com/athombv/node-homey-wifidriver.git"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/cgHome/ch.mystrom.smarthome/issues"
+  },
+  "homepage": "https://apps.athom.com/app/ch.mystrom.smarthome"
 }
