Homey-Dev added

--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
   ],
   "author": {
     "name": "Chris Gross",
-    "email": "cgHome@gmx.net"
+    "email": "cgHome@cflat-inc.org"
   },
   "drivers": [
     {
