--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "bugs": {
     "url": "https://github.com/cgHome/ch.mystrom.smarthome/issues"
   },
-  "homepage": "https://apps.athom.com/app/ch.mystrom.smarthome",
+  "homepage": "https://apps.athom.com/app/ch.mystrom.smarthome"
 }
