--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ch.mystrom.smarthome",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "This app provides support for the following devices:",
   "main": "app.js",
   "scripts": {
@@ -8,9 +8,9 @@
     "test": "npm run -s _homeyRun -- test && exit; homey app run",
     "setup": "npm run -s _homeyRun -- setup && exit; homey app install",
     "build": "npm run -s _homeyRun -- build && exit; homey app build && npm run init:app",
-    "deploy:patch": "npm run -s _homeyRun -- deploy:patch && exit; npm run _dbuild -- patch && npm run _release && homey app publish",
-    "deploy:minor": "npm run -s _homeyRun -- deploy:minor && exit; npm run _dbuild -- minor && npm run _release && homey app publish",
-    "deploy:major": "npm run -s _homeyRun -- deploy:major && exit; npm run _dbuild -- major && npm run _release && homey app publish",
+    "deploy:patch": "npm run -s _homeyRun -- deploy:patch && exit; npm run _dbuild -- patch && homey app publish && npm run _release",
+    "deploy:minor": "npm run -s _homeyRun -- deploy:minor && exit; npm run _dbuild -- minor && homey app publish && npm run _release",
+    "deploy:major": "npm run -s _homeyRun -- deploy:major && exit; npm run _dbuild -- major && homey app publish && npm run _release",
     "init:app": "npm run -s _homeyRun -- init:app && exit; npm init --quiet -y 1>/dev/null",
     "createRepo": "npm run -s _homeyRun -- createRepo && exit; hub create -d \"$npm_package_description\" -h $npm_package_homepage $npm_package_name && npm run init:app",
     "_homeyRun": "source ~/.bashrc && [[ \"$(type -t homey-run)\" = function ]] && homey-run -s",
