Migrate to axios

--- a/app.json
+++ b/app.json
@@ -81,6 +81,11 @@
         "light_saturation",
         "dim"
       ],
+      "capabilitiesOptions": {
+        "onoff": {
+          "setOnDim": false
+        }
+      },
       "pair": [
         {
           "id": "start",
