--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,21 @@
 {
 	"version": "0.2.0",
-	"configurations": [
+	"configurations": [		
+		{
+			"type": "node",
+			"request": "attach",
+			"name": "Attach to Homey",
+			"address": "192.168.50.xx",
+			"port": 9229,
+			"localRoot": "${workspaceFolder}",
+			"remoteRoot": "/"
+		},
 		{
 			"type": "chrome",
 			"request": "attach",
 			"name": "Attach to Chrome",
 			"port": 9222,
 			"webRoot": "${workspaceFolder}"
-		},
-
-		{
-			"type": "node",
-			"request": "attach",
-			"name": "Attach to Homey",
-			"address": "192.168.50.10",
-			"port": 9229,
-			"localRoot": "${workspaceFolder}",
-			"remoteRoot": "/"
 		}
 	]
 }
