--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
-  "name": "ch.mystrom.smarthome",
+  "name": "homey.mystrom",
   "version": "1.0.6",
-  "description": "This app provides support for the following devices:",
+  "description": "Adds support for myStrom devices.",
   "main": "app.js",
   "scripts": {
-    "info": "npm run -s _homeyRun -- info && exit; printf \"[Homey-App] \t $npm_package_name \n Version: \t v$npm_package_version \n Description: \t $npm_package_description \n Host: \t\t ${HOSTNAME} \n\nEnvironment variables:\n\n \" ",
-    "test": "npm run -s _homeyRun -- test && exit; homey app run",
-    "setup": "npm run -s _homeyRun -- setup && exit; homey app install",
-    "build": "npm run -s _homeyRun -- build && exit; homey app build && npm run init:app",
-    "deploy:patch": "npm run -s _homeyRun -- deploy:patch && exit; npm run _dbuild -- patch && homey app publish && npm run _release",
-    "deploy:minor": "npm run -s _homeyRun -- deploy:minor && exit; npm run _dbuild -- minor && homey app publish && npm run _release",
-    "deploy:major": "npm run -s _homeyRun -- deploy:major && exit; npm run _dbuild -- major && homey app publish && npm run _release",
-    "init:app": "npm run -s _homeyRun -- init:app && exit; npm init --quiet -y 1>/dev/null",
-    "createRepo": "npm run -s _homeyRun -- createRepo && exit; hub create -d \"$npm_package_description\" -h $npm_package_homepage $npm_package_name && npm run init:app",
-    "_homeyRun": "source ~/.bashrc && [[ \"$(type -t homey-run)\" = function ]] && homey-run -s",
-    "_dbuild": "func() { git checkout master && git pull && homey app version $1 && npm run init:app && npm run __dbuild; }; func",
-    "__dbuild": "git commit -am v$npm_package_version",
-    "_release": "npm run __dbuild && git tag v$npm_package_version && git push origin v$npm_package_version && git push origin master"
+    "test": "homey app run",
+    "start": "npm install && homey app install",
+    "build": "homey app build",
+    "publish": "homey app publish",
+    "postpublish": "npm run init && git commit --amend --no-edit ./package.json && git push -f origin main",
+    "validate": "homey app validate -l publish",
+    "validateTest": "homey app validate",
+    "init": "npm init --quiet -y 1>/dev/null",
+    "eslint": "eslint",
+    "prettier": "prettier"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cgHome/ch.mystrom.smarthome.git"
   },
   "keywords": [
+    "Smarthome",
     "homey",
-    "devices",
-    "app",
-    "myStrom Smart Home",
-    "Smart Home",
-    "athom"
+    "myStrom-SmartHome",
+    "ch.mystrom.smarthome"
   ],
   "author": "Chris Gross <cgHome@cflat-inc.org>",
   "license": "ISC",
   "dependencies": {
-    "athom-api": "^3.2.13",
-    "axios": "^0.20.0",
+    "athom-api": "^3.3.0",
+    "axios": "^0.21.1",
     "bonjour": "^3.5.0"
   },
   "bugs": {
-    "url": "https://github.com/cgHome/ch.mystrom.smarthome/issues"
+    "url": "https://github.com/cgHome/homey.myStrom/issues"
   },
-  "homepage": "https://homey.app/a/ch.mystrom.smarthome"
+  "homepage": "https://homey.app/a/ch.mystrom.smarthome",
+  "engines": {
+    "node": ">=12.16.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-athom": "^2.1.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "2.2.1"
+  }
 }
