--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^7.22.0",
     "eslint-config-athom": "^2.1.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "2.2.1"
   }
