migration to SDKv3

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,19 @@
 {
 	"version": "0.2.0",
-	"configurations": [		
+	"configurations": [
 		{
+			"name": "Attach to Homey",
 			"type": "node",
 			"request": "attach",
-			"name": "Attach to Homey",
 			"address": "192.168.50.10",
 			"port": 9229,
 			"localRoot": "${workspaceFolder}",
-			"remoteRoot": "/"
+			"remoteRoot": "/",
 		},
 		{
+			"name": "Attach to Chrome",
 			"type": "chrome",
 			"request": "attach",
-			"name": "Attach to Chrome",
 			"port": 9222,
 			"webRoot": "${workspaceFolder}"
 		}
