--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,3 @@
 {
-  "env": {
-    "node": true,
-    "es6": true
-  },
-  "plugins": ["prettier"],
-  "extends": [
-    "athom",
-    "eslint:recommended",
-    "plugin:node/recommended",
-    "plugin:prettier/recommended"
-  ],
-  "rules": {
-    "no-shadow": ["error", { "allow": ["current"]}],
-    "prefer-rest-params": "off",
-    "prettier/prettier": "error"
-  }
+  "extends": "athom"
 }
