--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
+  "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "ch.mystrom.smarthome",
-  "sdk": 2,
+  "sdk": 3,
   "name": {
     "en": "myStrom-SmartHome"
   },
@@ -8,7 +9,7 @@
     "en": "Adds support for myStrom devices."
   },
   "version": "1.1.0",
-  "compatibility": ">=2.5.0",
+  "compatibility": ">=5.0.0",
   "source": "https://github.com/cgHome/homey.myStrom",
   "bugs": {
     "url": "https://github.com/cgHome/homey.myStrom/issues"
@@ -26,44 +27,19 @@
     "name": "Chris Gross",
     "email": "cgHome@cflat-inc.org"
   },
+  "platforms": [
+    "local"
+  ],
+  "api": {
+    "deviceGenActionAPI": {
+      "description": "myStrom device generic action",
+      "method": "get",
+      "path": "/deviceGenAction",
+      "public": true
+    }
+  },
   "drivers": [
     {
-      "id": "switch",
-      "name": {
-        "en": "WiFi Switch"
-      },
-      "images": {
-        "large": "drivers/switch/assets/images/large.png",
-        "small": "drivers/switch/assets/images/small.png"
-      },
-      "class": "socket",
-      "capabilities": [
-        "onoff",
-        "measure_power",
-        "measure_temperature"
-      ],
-      "pair": [
-        {
-          "id": "start",
-          "navigation": {
-            "next": "list_devices"
-          }
-        },
-        {
-          "id": "list_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_devices"
-          }
-        },
-        {
-          "id": "add_devices",
-          "template": "add_devices"
-        }
-      ]
-    },
-    {
-      "id": "bulb",
       "name": {
         "en": "WiFi Bulb"
       },
@@ -98,10 +74,10 @@
           "id": "add_devices",
           "template": "add_devices"
         }
-      ]
+      ],
+      "id": "bulb"
     },
     {
-      "id": "button",
       "name": {
         "en": "WiFi Button"
       },
@@ -137,10 +113,10 @@
           "id": "add_devices",
           "template": "add_devices"
         }
-      ]
+      ],
+      "id": "button"
     },
     {
-      "id": "button_plus",
       "name": {
         "en": "WiFi Button+"
       },
@@ -178,7 +154,43 @@
           "id": "add_devices",
           "template": "add_devices"
         }
-      ]
+      ],
+      "id": "button_plus"
+    },
+    {
+      "name": {
+        "en": "WiFi Switch"
+      },
+      "images": {
+        "large": "drivers/switch/assets/images/large.png",
+        "small": "drivers/switch/assets/images/small.png"
+      },
+      "class": "socket",
+      "capabilities": [
+        "onoff",
+        "measure_power",
+        "measure_temperature"
+      ],
+      "pair": [
+        {
+          "id": "start",
+          "navigation": {
+            "next": "list_devices"
+          }
+        },
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "switch"
     }
   ],
   "flow": {
@@ -191,8 +203,8 @@
         },
         "args": [
           {
-            "name": "device",
             "type": "device",
+            "name": "device",
             "filter": "driver_id=button"
           },
           {
@@ -232,8 +244,8 @@
         },
         "args": [
           {
-            "name": "device",
             "type": "device",
+            "name": "device",
             "filter": "driver_id=button_plus"
           },
           {
@@ -287,8 +299,8 @@
         },
         "args": [
           {
-            "name": "device",
             "type": "device",
+            "name": "device",
             "filter": "driver_id=button_plus"
           }
         ],
