--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homey.mystrom",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Adds support for myStrom devices.",
   "main": "app.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "start": "npm install && homey app install",
     "build": "homey app build",
     "publish": "homey app publish",
-    "postpublish": "npm run init && git commit --amend --no-edit ./package.json && git push -f origin main",
+    "postpublish": "git commit --amend --no-edit ./package.json && git push -f origin main",
     "validate": "homey app validate -l publish",
     "validateTest": "homey app validate",
     "eslint": "eslint"
