--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -5,7 +5,7 @@
     "en": "myStrom-SmartHome"
   },
   "description": {
-    "en": "Adds support for myStrom devices."
+    "en": "myStrom 💚 better control"
   },
   "version": "1.1.1",
   "compatibility": ">=5.0.0",
@@ -31,7 +31,7 @@
   ],
   "api": {
     "deviceGenActionAPI": {
-      "description": "myStrom device generic action",
+      "description": "myStrom [button] generic action",
       "method": "get",
       "path": "/deviceGenAction",
       "public": true
