--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.1.1",
   "description": "Adds support for myStrom devices.",
   "main": "app.js",
+  "engines": {
+    "node": ">=12.22"
+  },
   "scripts": {
-    "test": "homey app run",
+    "debug": "homey app run",
     "start": "npm install && homey app install",
     "build": "homey app build",
     "publish": "homey app publish",
@@ -25,19 +28,19 @@
   ],
   "author": "Chris Gross <cgHome@cflat-inc.org>",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.0",
-    "bonjour": "^3.5.0"
-  },
   "bugs": {
     "url": "https://github.com/cgHome/homey.myStrom/issues"
   },
   "homepage": "https://homey.app/a/ch.mystrom.smarthome",
-  "engines": {
-    "node": ">=12.16.1"
-  },
   "devDependencies": {
-    "eslint": "^8.29.0",
+    "@tsconfig/node12": "^1.0.11",
+    "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.3",
+    "@types/node": "^18.11.19",
+    "eslint": "^8.33.0",
     "eslint-config-athom": "^3.1.1"
+  },
+  "dependencies": {
+    "axios": "^1.3.2",
+    "bonjour": "^3.5.0"
   }
 }
